--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,41 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.edurt</groupId>
-  <artifactId>springboot-angular-integration</artifactId>
-  <packaging>jar</packaging>
-  <version>1.0.0</version>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.edurt</groupId>
+    <artifactId>springboot-angular-integration</artifactId>
+    <packaging>jar</packaging>
+    <version>1.0.0</version>
 
-  <name>springboot-angular-integration</name>
-  <url>http://maven.apache.org</url>
+    <name>springboot-angular-integration</name>
+    <url>http://maven.apache.org</url>
 
-  <dependencies>
-  </dependencies>
+    <properties>
+        <system.java.version>1.8</system.java.version>
+        <dependency.springboot.version>1.5.6.RELEASE</dependency.springboot.version>
+        <plugin.springboot.version>1.5.9.RELEASE</plugin.springboot.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>${dependency.springboot.version}</version>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${plugin.springboot.version}</version>
+                <configuration>
+                    <fork>true</fork>
+                </configuration>
+            </plugin>
+        </plugins>
+
+    </build>
 
 </project>
