--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,13 @@
 
     <properties>
         <system.java.version>1.8</system.java.version>
+        <!-- node & npm -->
+        <system.node.version>v8.2.1</system.node.version>
+        <system.npm.version>5.4.2</system.npm.version>
         <dependency.springboot.version>1.5.6.RELEASE</dependency.springboot.version>
         <plugin.springboot.version>1.5.9.RELEASE</plugin.springboot.version>
+        <!-- plugin -->
+        <plugin.frontend.version>0.0.27</plugin.frontend.version>
     </properties>
 
     <dependencies>
@@ -33,6 +38,49 @@
                 <configuration>
                     <fork>true</fork>
                 </configuration>
+            </plugin>
+            <!-- Frontend -->
+            <plugin>
+                <groupId>com.github.eirslett</groupId>
+                <artifactId>frontend-maven-plugin</artifactId>
+                <version>${plugin.frontend.version}</version>
+                <configuration>
+                    <!-- angular 源码根目录 angular -->
+                    <workingDirectory>src/main/angular</workingDirectory>
+                    <nodeDownloadRoot>https://npm.taobao.org/mirrors/node/</nodeDownloadRoot>
+                    <nodeVersion>${system.node.version}</nodeVersion>
+                    <npmVersion>${system.npm.version}</npmVersion>
+                    <installDirectory>target</installDirectory>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>install node and npm</id>
+                        <goals>
+                            <goal>install-node-and-npm</goal>
+                        </goals>
+                        <phase>generate-resources</phase>
+                    </execution>
+                    <execution>
+                        <id>npm install</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>install</arguments>
+                            <installDirectory>target</installDirectory>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>angular cli build</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        <phase>generate-resources</phase>
+                        <configuration>
+                            <arguments>run build</arguments>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
 
